--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
             <div class="navbar-title">MedSync</div>
             <div class="navbar-subtitle">Hospital Management System</div>
         </div>
+        
+        <!-- Mobile Menu Toggle Button -->
+        <button class="mobile-menu-btn" aria-label="Toggle navigation">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
+
         <div class="navbar-links">
             <button class="nav-btn active" data-view="tasks-view">Tasks</button>
             <button class="nav-btn" data-view="completed-view">History</button>
