--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MedSync Manager</title>
+    <title>Task Manager</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sql.js/1.10.3/sql-wasm.js"></script>
 </head>
@@ -11,8 +11,8 @@
 
     <nav class="navbar">
         <div class="navbar-left">
-            <div class="navbar-title">MedSync</div>
-            <div class="navbar-subtitle">Hospital Management System</div>
+            <div class="navbar-title">Task-Sync</div>
+            <div class="navbar-subtitle">Task Manager</div>
         </div>
         
         <!-- Mobile Menu Toggle Button -->
